[tool.poetry]
name = "pycounts_lrh"
version = "0.1.0"
description = "'Just my first python package'"
authors = ["Loyd Hook"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
